# public-showcase

./: .gitignore  README.md
degressive-democracy/: .zenodo.json  BACKLOG.md  FINDINGS.md  LICENSE  README.md  SEEDS.md  pyproject.toml
degressive-democracy/concepts/: architecture.md  game_theory.md  implementation_and_reversibility.md  nash_proof.md  political_analogies.md
degressive-democracy/degressive_democracy/: __init__.py  __main__.py  advanced.py  citizen.py  dashboard.py  dashboard_template.html  election.py  empirical.py  evolution.py  exploits.py  game_theory.py  germany.py  metrics.py  models.py  municipal.py  politician.py  reversible.py  robust.py  satisfaction_models.py  sensitivity.py  simulation.py  validation.py  visualize.py
degressive-democracy/output/: dashboard.html
degressive-democracy/paper/: degressive_democracy_irreversible_vote_withdrawal.md  draft.md
degressive-democracy/tests/: conftest.py  test_advanced.py  test_citizen.py  test_election.py  test_evolution.py  test_exploits.py  test_game_theory.py  test_germany.py  test_models.py  test_municipal.py  test_politician.py  test_simulation.py  test_validation.py
layered-llm-defense/: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  conftest.py  explainer.html  pyproject.toml
layered-llm-defense/concepts/: architecture.md  biological_formalization.md  experiment_findings.md  metrics.md  response_strategy.md  self_adversarial_loop.md
layered-llm-defense/examples/: quickstart.py
layered-llm-defense/lld/: __init__.py  ablation.py  attacker_fatigue.py  benchmark_groq.py  benchmark_harmbench.py  bio_defense.py  correlation_engine.py  defense.py  double_judge.py  experiment_cost_multiplication.py  experiment_greene_strategies.py  experiment_hormesis_exploit.py  experiment_layer_independence.py  experiment_minimum_viable.py  experiment_post_fix_validation.py  experiment_response_strategy.py  experiment_sal.py  extended_attacks.py  groq_judge.py  input_fragmenter.py  integrated_defense.py  layer1_formal.py  layer2_antifragile.py  layer3_infosec.py  layer4_mtd.py  llamaguard_adapter.py  ooda_disruption.py  response_strategy.py  sal_loop.py  sal_red_team.py  sal_thymus.py  watermark.py
layered-llm-defense/outputs/: executive_summary_2026-04-08.md  limitations_report_2026-04-07.md  technical_report_2026-04-07.md
layered-llm-defense/scripts/: generate_figures.py
layered-llm-defense/tests/: test_adversarial.py  test_bio_defense.py  test_correlation.py  test_defense.py  test_fatigue.py  test_fragmenter.py  test_integrated.py  test_ooda_watermark.py  test_response_strategy.py  test_sal.py
lean-multi-agent-debate/: .env.example  .gitignore  .zenodo.json  00_ARCHITECTURE.md  BACKLOG.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
lean-multi-agent-debate/benchmarks/: datasets.py  metrics.py  runner.py  sycophancy_compare.py
lean-multi-agent-debate/debate/: __init__.py  cli.py  config.py  debate_manager.py  models.py  output_formatter.py
lean-multi-agent-debate/debate/utils/: logger.py
lean-multi-agent-debate/mcp_server/: package-lock.json  package.json  server.js
lean-multi-agent-debate/paper/: debate_paper.bib  debate_paper.tex
lean-multi-agent-debate/tests/: conftest.py  test_cli.py  test_debate_manager.py  test_models.py  test_output_formatter.py
mkos-knowledge-immune-system/: .env.example  .zenodo.json  LICENSE  README.md  pyproject.toml
mkos-knowledge-immune-system/akm/: __init__.py  __main__.py  cli.py  config.py
mkos-knowledge-immune-system/akm/benchmarks/: ablation.py  baselines.py  biomimicry_eval.py  datasets.py  kqab.py  kqab_runner.py  longitudinal.py  metrics.py  public_datasets.py  real_world_dataset.py  runner.py  statistics.py  zero_shot_dataset.py
mkos-knowledge-immune-system/akm/composting/: composter.py  decomposer.py  entropy.py  nutrient_store.py
mkos-knowledge-immune-system/akm/dashboard/: __init__.py  app.py
mkos-knowledge-immune-system/akm/fermentation/: chamber.py  contradiction.py  cross_ref.py  fermenter.py
mkos-knowledge-immune-system/akm/homeostasis/: regulator.py
mkos-knowledge-immune-system/akm/immune/: antigens.py  clonal.py  detectors.py  knowledge_graph.py  memory.py  system.py  uncertainty.py
mkos-knowledge-immune-system/akm/ingestion/: chunker.py  parsers.py  scanner.py
mkos-knowledge-immune-system/akm/llm/: cache.py  client.py  openai_client.py
mkos-knowledge-immune-system/akm/quorum/: sensing.py
mkos-knowledge-immune-system/mcp_server/: package-lock.json  package.json  server.js
mkos-knowledge-immune-system/paper/: mkos_paper.tex
mkos-knowledge-immune-system/tests/: conftest.py  test_benchmarks.py  test_composting.py  test_fermentation.py  test_homeostasis.py  test_immune.py  test_quorum.py  test_stigmergy.py
(+25 files in other folders)
