[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-debate"
version = "1.3.0"
description = "Multi-provider adversarial debate engine (Gemini × Claude Opus)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23"]

[project.scripts]
debate = "debate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["debate*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
